UI implementation added

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,85 @@
-.container{
-    max-width:100%;
+.container {
+    max-width: 100%;
+}
+
+.main {
+    background-color: #ffffff;
+    padding: 10px;
+    max-height: 90vh;
+    overflow: auto;
+}
+
+.main-container {
+    padding: 10px;
+    min-height: 90vh;
+    max-height: 90vh;
+    overflow: auto;
+}
+
+.inner-container {
+    background-color: #e5f2ff;
+    padding: 10px;
+}
+
+.custom-add {
+    margin-top: 10px;
+    padding: 10px;
+    background-color: rgb(0 123 255 / 10%);
+}
+
+.custom-add label {
+    width: 100%;
+}
+
+.custom-add label span {
+    float: right;
+    color: red;
+    cursor: pointer;
+}
+
+.main-container {
+    background-color: #ffffff;
+}
+
+.fixed-bottom-button {
+    position: fixed;
+    bottom: 100px;
+    left: 50px;
+}
+
+.info {
+    text-align: center;
+    top: 30%;
+    position: absolute;
+    margin: 0px auto;
+    width: 100%;
+    font-size: 20px;
+    color: #e0e0e0;
+}
+
+.info div:first-child {
+    font-size: 30px;
+}
+
+.list-card {
+    text-align: center;
+    padding: 15px 10px;
+    background: #ffffff;
+    border: none;
+}
+
+.list-card .card-title {
+    margin-bottom: 5px;
+    color: #2d2d2d;
+    font-size: 18px;
+}
+
+.list-card .card-title span {
+    font-weight: bold;
+    color: #10bf38;
+}
+
+.list-card .card-text {
+    font-size: 14px;
+    color: #5f5f5f;
 }
