--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,35 +1,43 @@
 <div class="container">
   <div class="row">
-    <div class="col-2">
-      <form [formGroup]="inputForm">
-        <div formArrayName="inputValue">
-          <div *ngFor="let item of inputData.controls; let pointIndex=index" [formGroupName]="pointIndex">
-            <div class="form-group">
-              <label for="exampleFormControlTextarea1">Enter your numbers</label>
-              <textarea class="form-control" name="userValue" formControlName="input" id="exampleFormControlTextarea1"
-                rows="3"></textarea>
+    <div class="col-3 mt-2">
+      <div class="main">
+        <form [formGroup]="inputForm">
+          <div formArrayName="inputValue">
+            <div *ngFor="let item of inputData.controls; let pointIndex=index" [formGroupName]="pointIndex">
+              <div class="form-group mt-2 custom-add">
+                <label for="exampleFormControlTextarea1">Enter your numbers <span
+                    (click)="deleteSellingPoint(pointIndex)"><i class="fa fa-close"></i></span></label>
+                <textarea class="form-control" name="userValue" formControlName="input" id="exampleFormControlTextarea1"
+                  rows="3"></textarea>
+
+                <!-- <button type="button" class="btn btn-danger mt-2" (click)="deleteSellingPoint(pointIndex)">Delete Input</button> -->
+              </div>
             </div>
-            <button type="button" class="btn btn-danger" (click)="deleteSellingPoint(pointIndex)">Delete Input</button>
           </div>
-        </div>
-      </form>
-      <br> <button type="button" class="btn btn-info" (click)="addSellingPoint()">Add Input</button>
-      <button type="submit" class="btn btn-success " (click)="getResult()">Get Result</button>
-
-
+        </form>
+      </div>
+      <div class="text-left bg-white pb-3 pl-2">
+        <button type="button" class="btn btn-info" (click)="addSellingPoint()">Add Input</button>
+        <button type="submit" class="btn btn-success ml-3" (click)="getResult()">Get Result</button>
+      </div>
     </div>
-    <div class="col-10">
-      <div class="card" *ngFor="let finalresult of finalResult">
-        <div class="container">
-          <input type="text">
-          <div class="row">
-            <div class="col-3" *ngFor="let result of finalresult;let i=index">
-              <div class="card-content">
-                <div class="card-body cleartfix">
-                  <div class="card">
-                    <h5 class="card-title text-info">{{result?.filterKey}} Count: {{result?.count}}</h5>
-                    <p class="card-text"><span *ngFor="let value of result?.totalValue">{{value}} </span></p>
-                  </div>
+    <div class="col-9 mt-2 pl-0">
+      <div class="main-container">
+        <!-- <div class="info">
+          <div> No Data Avaliable</div>
+          <div> Please Enter your numbers and click GET RESULET</div>
+        </div> -->
+        <div class="mb-3" *ngFor="let finalresult of finalResult">
+          <div class="inner-container">
+            <!-- <input type="text"> -->
+            <div class="row">
+              <div class="col-3 mb-3" *ngFor="let result of finalresult;let i=index">
+                  <div class="cleartfix">
+                    <div class="card list-card">
+                      <h5 class="card-title"><span>{{result?.filterKey}}</span>&nbsp; Count: {{result?.count}}</h5>
+                      <p class="card-text"><span *ngFor="let value of result?.totalValue">{{value}} </span></p>
+                    </div>
                 </div>
               </div>
             </div>
