--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,35 @@
 <div class="container">
   <div class="row">
-    <div class="col-2">
+    <div class="col-12">
       <form [formGroup]="inputForm">
         <div formArrayName="inputValue">
           <div *ngFor="let item of inputData.controls; let pointIndex=index" [formGroupName]="pointIndex">
-            <div class="form-group">
-              <label for="exampleFormControlTextarea1">Enter your numbers</label>
-              <textarea class="form-control" name="userValue" formControlName="input" id="exampleFormControlTextarea1"
-                rows="3"></textarea>
+            <div class="container">
+              <div class="row">
+                <div class="form-group col-3">
+                  <label for="exampleFormControlTextarea1">Enter your numbers</label>
+                  <textarea class="form-control" name="userValue" formControlName="input"
+                    id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <div class="col-9">
+                  <div class="card">
+                    <div class="container">
+                      <input type="text">
+                      <div class="row">
+                        <div class="col-3">
+                          <div class="card-content" *ngFor="let result of finalResult[pointIndex];let i=index">
+                            <span *ngIf="result?.count !=1">
+                              <h5 class="card-title text-info">{{result?.filterKey}} Count:
+                                {{result?.count}}</h5>
+                              <p class="card-text"><span *ngFor="let value of result?.totalValue">{{value}} </span></p>
+                            </span>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
             <button type="button" class="btn btn-danger" (click)="deleteSellingPoint(pointIndex)">Delete Input</button>
           </div>
@@ -18,7 +40,7 @@
 
 
     </div>
-    <div class="col-10">
+    <!-- <div class="col-10">
       <div class="card" *ngFor="let finalresult of finalResult">
         <div class="container">
           <input type="text">
@@ -36,7 +58,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
 <!-- 
