--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -13,6 +13,7 @@
                     <tr>
                         <th scope="col">Day</th>
                         <th scope="col">Input Name</th>
+                        <th scope="col">Created Date</th>
                         <th scope="col">Actions</th>
                     </tr>
                 </thead>
@@ -20,6 +21,7 @@
                     <tr *ngFor="let list of listData; let i= index">
                         <th scope="row">{{i + 1}}</th>
                         <td>{{list?.name}}</td>
+                        <td>{{list?.created_date | date: 'dd/MM/yyyy'}}</td>
                         <td>
                             <button type="button" class="btn btn-primary" (click)="open(list)"><i
                                     class="far fa-eye"></i></button>
